# local-hotel

./: .env  Cargo.toml  README.md  db.sh
migrations/: 20240104194927_create_booking_table.sql  20240105183424_init.down.sql  20240105183424_init.up.sql
src/: config.rs  handlers.rs  jwt_auth.rs  main.rs  models.rs  response.rs  route.rs  schema.rs
src/handlers/: auth.rs  booking.rs  health_check.rs  mod.rs
