[package]
name = "local-hotel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "any",
  "postgres",
] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
