[package]
name = "local-hotel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "any",
  "postgres",
  "chrono",
] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
serde_json = "1.0.111"
jsonwebtoken = "9.2.0"
argon2 = "0.5.2"
rand_core = { version = "0.6.4", features = ["std"] }
tower-http = { version = "0.5.0", features = ["cors"] }
